fix: save firstName and lastName in database when register new user